--- a/html/about.html
+++ b/html/about.html
@@ -12,7 +12,7 @@
         <div class="header">
             <img src="../img/logo.png" alt="logo" class="headerLogo">
             <div class="headerLinks">
-                <a href="index.html">HOME</a>
+                <a href="../index.html">HOME</a>
                 <a href="menu.html">MENU</a>     
                 <a href="about.html">ABOUT US</a>   
                 <a href="apply.html">APPLY</a>     
