--- a/index.html
+++ b/index.html
@@ -4,31 +4,31 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Rocky&apos;s Burger&apos;s</title>
-    <link rel="stylesheet" href="../css/main.css" type="text/css">
+    <link rel="stylesheet" href="css/main.css" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
     <div class="content">
         <div class="header">
-            <img src="../img/logo.png" alt="logo" class="headerLogo">
+            <img src="img/logo.png" alt="logo" class="headerLogo">
             <i class="fas fa-bars" id="verticalMenuButton"></i>
             <div class="headerLinks">
                 <a href="index.html">HOME</a>
-                <a href="menu.html">MENU</a>
-                <a href="about.html">ABOUT US</a>
-                <a href="apply.html">APPLY</a>
+                <a href="html/menu.html">MENU</a>
+                <a href="html/about.html">ABOUT US</a>
+                <a href="html/apply.html">APPLY</a>
             </div>
         </div>
         <div class="verticalHeader">
             <div class="verticalHeaderLinks">
                 <a href="index.html">HOME</a>
-                <a href="menu.html">MENU</a>
-                <a href="about.html">ABOUT US</a>
-                <a href="apply.html">APPLY</a>
+                <a href="html/menu.html">MENU</a>
+                <a href="html/about.html">ABOUT US</a>
+                <a href="html/apply.html">APPLY</a>
             </div>
         </div>
         <div class="mainContent">
-            <img src="../img/home.jpg" alt="burger" class="mainImage">   
+            <img src="img/home.jpg" alt="burger" class="mainImage">
         <div class="mainBlurb">
                 <span class="slogan">Best Quality Burgers in town. Off the charts.</span> 
                 <p>
@@ -101,6 +101,6 @@
             footer
         </div>
     </div>
-    <script src="../js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
