Added side menu bar

--- a/html/about.html
+++ b/html/about.html
@@ -10,12 +10,23 @@
 <body>
     <div class="content">
         <div class="header">
-            <img src="../img/logo.png" alt="logo" class="headerLogo">
+            <div class="headerLogo">
+                <img src="../img/logo.png" alt="logo">
+            </div>
+            <i class="fas fa-bars" id="verticalMenuButton"></i>
             <div class="headerLinks">
                 <a href="../index.html">HOME</a>
-                <a href="menu.html">MENU</a>     
-                <a href="about.html">ABOUT US</a>   
-                <a href="apply.html">APPLY</a>     
+                <a href="menu.html">MENU</a>
+                <a href="about.html">ABOUT US</a>
+                <a href="apply.html">APPLY</a>
+            </div>
+        </div>
+        <div id="verticalHeader">
+            <div class="verticalHeaderLinks">
+                <a href="../index.html">HOME</a>
+                <a href="menu.html">MENU</a>
+                <a href="about.html">ABOUT US</a>
+                <a href="apply.html">APPLY</a>
             </div>
         </div>
         <div class="mainContainer">
@@ -95,9 +106,10 @@
         </div>
 
         <div class="footer">
-            footer
+            Tyler Spackman 2019
         </div>
     </div>
+    <script src="../js/faq.js"></script>
     <script src="../js/main.js"></script>
 </body>
 </html>
