--- a/html/apply.html
+++ b/html/apply.html
@@ -5,16 +5,28 @@
     <meta name="viewport" content="width=device-width">
     <title>Rocky&apos;s Burger&apos;s</title>
     <link rel="stylesheet" href="../css/main.css" type="text/css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
     <div class="content">
         <div class="header">
-            <img src="../img/logo.png" alt="logo" class="headerLogo">
+            <div class="headerLogo">
+                <img src="../img/logo.png" alt="logo">
+            </div>
+            <i class="fas fa-bars" id="verticalMenuButton"></i>
             <div class="headerLinks">
                 <a href="../index.html">HOME</a>
-                <a href="menu.html">MENU</a>     
-                <a href="about.html">ABOUT US</a>   
-                <a href="apply.html">APPLY</a>     
+                <a href="menu.html">MENU</a>
+                <a href="about.html">ABOUT US</a>
+                <a href="apply.html">APPLY</a>
+            </div>
+        </div>
+        <div id="verticalHeader">
+            <div class="verticalHeaderLinks">
+                <a href="../index.html">HOME</a>
+                <a href="menu.html">MENU</a>
+                <a href="about.html">ABOUT US</a>
+                <a href="apply.html">APPLY</a>
             </div>
         </div>
         <form method="POST">
@@ -77,8 +89,9 @@
             
         </form>
         <div class="footer">
-            footer
+            Tyler Spackman 2019
         </div>
     </div>
+    <script src="../js/main.js"></script>
 </body>
 </html>
