--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="content">
         <div class="header">
-            <img src="img/logo.png" alt="logo" class="headerLogo">
+            <div class="headerLogo">
+                <img src="img/logo.png" alt="logo">
+            </div>
             <i class="fas fa-bars" id="verticalMenuButton"></i>
             <div class="headerLinks">
                 <a href="index.html">HOME</a>
@@ -19,7 +21,7 @@
                 <a href="html/apply.html">APPLY</a>
             </div>
         </div>
-        <div class="verticalHeader">
+        <div id="verticalHeader">
             <div class="verticalHeaderLinks">
                 <a href="index.html">HOME</a>
                 <a href="html/menu.html">MENU</a>
@@ -98,9 +100,9 @@
             </div>
         </div>
         <div class="footer">
-            footer
+            Tyler Spackman 2019
         </div>
     </div>
-    <script src="js/index.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
