Changed menu text styling

--- a/html/menu.html
+++ b/html/menu.html
@@ -105,7 +105,7 @@
             <h1>Drinks</h1>
             <img src="../img/drink.jpg" alt="drink">
             <div class="menuItem">
-                    <span class="menuDescription">
+                    <span class="menuTitle">
                         Fountain … $2.50 <br>
                         Organic Iced Tea … $2.75 <br>
                         Fresh Lemonade … $3.25 <br>
