improving faq styling

--- a/html/about.html
+++ b/html/about.html
@@ -77,7 +77,7 @@
                 </table>
             </div>
             <div class="faq">
-                <span>FAQ</span>
+                <span class="heading">FAQ</span>
                 <div class="faqQandA">
                     <span class="question" id="question1">
                         Why is your Rockey Burger So Expensive? <i class="fas fa-sort-down" id="q1Icon"></i>
