added a bunch of color, padding/margin, and other styling

--- a/html/apply.html
+++ b/html/apply.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Rocky&apos;s Burger&apos;s</title>
     <link rel="stylesheet" href="../css/main.css" type="text/css">
+    <link rel="stylesheet" href="../css/apply.css" type="text/css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 <body>
@@ -82,6 +83,11 @@
                 </div>
                 
             </div>
+            <div>
+                <label for="greatFit">What makes you a great fit?</label>
+                <textarea name="job2" id="greatFit" cols="30" rows="10"></textarea>
+            </div>
+
             <div>
                 <input type="reset" id="reset" value="reset">
                 <input type="submit" id="submit" value="Submit">
